--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Press Start 2P', cursive;
+}
+
+.principal-container {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgb(25, 25, 25);
 }
 
 .title-container {
@@ -11,14 +20,15 @@
 }
 
 .ship-image {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 9em;
 }
 
 .title-image {
-    background-color: aqua;
     height: 100%;
     width: 20%;
+    display: flex;
+    justify-content: center;
 }
 
 .ship-image.animate-duration-2s {
@@ -43,10 +53,56 @@
     height: 100%;
     width: auto;
     color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.principal-container {
-    width: 100vw;
-    height: 100vh;
-    background-color: rgb(25, 25, 25);
+.board-container {
+    width: 100%;
+    height: 70%;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    gap: 10px;
+    margin-top:1.5em
+}
+
+.lateral {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    height: 100%;
+    color: white;
+    padding: 1.5em;
+}
+
+.board {
+    display: flex;
+    justify-content: center;
+    height: fit-content;
+    padding: 1em;
+}
+
+.battlefield {
+    color: rgb(228, 14, 39);
+    font-size: 1.3rem;
+}
+
+.battlefield th,
+.battlefield td {
+    padding: 0.5em;
+    text-align: center;
+}
+
+.battlefield th {
+    background-color: rgb(24, 154, 54);
+    font-weight: bold;
+    color:black
+}
+
+.battlefield th:first-child,
+.battlefield td:first-child {
+    background-color: rgb(24, 154, 54);
+    font-weight: bold;
+    color:black
 }
