--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,21 +32,17 @@
 }
 
 .ship-image.animate-duration-2s {
-    --animate-duration: 2s;
-    animation-duration: 2s;
+    /* --animate-duration: 2s;
+    animation-duration: 2s; */
+    animation: shakeX 10s infinite;
     animation-fill-mode: both;
 }
 
-.ship-image.animate__shakeX {
-    --animate-name: shakeX;
-    animation-name: shakeX;
-    animation-fill-mode: both;
-}
 
-.ship-image.animate__repeat-infinite {
-    --animate-repeat: infinite;
-    animation-iteration-count: infinite;
-    animation-fill-mode: both;
+@keyframes shakeX {
+    0% { transform: translateX(15px); }
+    50% { transform: translateX(20px); }
+    100% { transform: translateX(30px); }
 }
 
 .title {
@@ -62,7 +58,7 @@
     width: 100%;
     height: 70%;
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr auto 1fr;
     gap: 10px;
     margin-top:1.5em
 }
@@ -84,8 +80,11 @@
 }
 
 .battlefield {
-    color: rgb(228, 14, 39);
     font-size: 1.3rem;
+}
+
+.initial-color{
+    background-color: rgb(0, 157, 255);
 }
 
 .battlefield th,
@@ -94,15 +93,15 @@
     text-align: center;
 }
 
-.battlefield th {
-    background-color: rgb(24, 154, 54);
+.battlefield th:first-child,
+.battlefield td:first-child {
+    background-color: rgb(24, 154, 54) !important; 
     font-weight: bold;
     color:black
 }
 
-.battlefield th:first-child,
-.battlefield td:first-child {
-    background-color: rgb(24, 154, 54);
+.column-header{
+    background-color: rgb(24, 154, 54) !important; 
     font-weight: bold;
     color:black
 }
